- SMIME: SMIME certificate only works for the owner of the email account, not when the email account is shared.
- Billing: PDF generator, fixed bugs in the pagenumber display and fixed bug with full page images creating a blank page.
- Tasks: Fixed problem with the reminder of tasks when the task is recurring. (The reminder of the recurring item wasn't changed.)
- Don't close the upload dialog when the config parameter "upload_quickselect" is set to false.
- Email: Composer -> The "from" combobox doesn't need to be editable.
- Tickets: Added "ticket group" to display panel
- Address book: user permissions check for custom fields in Advanced Search
- Address book: show company info in contact display panel.
- Form processor: name of address book is mentioned in the "new contact" notification email.
- Calendar: Moving event with resources now checks if the resources are available.
- SMIME: Also disable the "Encrypt with SMIME" option in the email composer when there is no certificate set for the account.
- Addressbook/Billing: Fixed display of records in companySelect field. 
	Fixes issue with addressbook name displayed in reciepient field of the order dialog in the billing module.
- Added update query that sets the correct permissions for the installed modules. (Because some permissionlevels are removed.)

16-04-2014 5.0.55
- Updated German translation
- BUGFIX: most smtp send errors were ignored in the mail module
- Calendar: Improved notification flow for participants for when event has been updated.
- In some cases old project folders could be left in the files module after 
  renaming projects.
- Sync filesystem ignores ACL and system folders because they don't exist anyway.
- Tickets: Users can only edit their own messages and not the messages from others.
	When you have manage permissions on the ticket module, then you can edit messages from others.


14-04-2014 5.0.54
- Changed delete permissions for ticket messages. 